# ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cifar-10/: README.md  cifar-10-with-cnn.ipynb  cifar-10-with-dnn.ipynb  cifar-10-with-dnn.py  cifar-10-with-pre-trained-vgg16-data-augmentation.ipynb  cifar-10.ipynb  cifar-10.py
house-prices-advanced-regression-techniques/: README.md  house-prices-advanced-regression-techniques-baseline.ipynb
house_price/: kaggle_house_prices.ipynb  kaggle_house_prices.py  my-house-price.ipynb  my-house-price.py
house_price/answer_key/: Kaggle 房價預測 參考答案.ipynb  house_price.py
house_price/reference/: 1-house-prices-solution-top-1.ipynb
loan-prediction/: README.md  loan-prediction.ipynb
loan-prediction/web/: form.html  main.py
materials/01_machine_learning/: 01_evaluation_index.py  02_regression_model.py  03_lasso_ridge.py  04_decision_tree.py  05_random_forest.py  06_gradient_boosting_machine.py  20220331 機器學習實作1 機器學習.ipynb
materials/02_data_cleaning_and_preprocessing/: 20221109 機器學習實作2 資料清理數據前處理 - 1.ipynb  20221109 機器學習實作2 資料清理數據前處理 - 2.ipynb
materials/05_feature_engineering/: 20221207 機器學習實作5 特徵工程.ipynb
taxi_fare/: kaggle_new_york_taxi_fare_prediction.ipynb  kaggle_new_york_taxi_fare_prediction.py  taxi-fare.ipynb  taxi-fare.py
titanic/: README.md  kaggle_titanic.ipynb  kaggle_titanic.py  titanic.ipynb  top-5-my-titanic.ipynb  top-5-my-titanic.py
video_to_ascii/: build.sh  build_test.sh  compile_commands.json  main.cpp  main.out  test_cv  test_cv.cpp
(+13 files in other folders)
