[tool.poetry]
name = "kaggle"
version = "0.0.1"
description = "Some ipython notebooks implementing AI algorithms"
authors = ["Hugo ChunHo Lin <hugo970217@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
